# ohm

./: .gitignore  Cargo.toml  flake.nix
crates/ohm/: Cargo.toml
crates/ohm-core/: Cargo.toml
crates/ohm-core/src/: asset.rs  color.rs  corner_radii.rs  error.rs  image.rs  lib.rs  path.rs  texture.rs
crates/ohm-core/src/math/: mod.rs  rect.rs
crates/ohm-core/src/renderer/: batcher.rs  mod.rs  path_cache.rs
crates/ohm-core/src/text/: buffer.rs  font.rs  font_db.rs  mod.rs  rasterization.rs  shaping.rs
crates/ohm-fontdb/: Cargo.toml
crates/ohm-fontdb/src/: lib.rs
crates/ohm-freetype/: Cargo.toml
crates/ohm-freetype/src/: lib.rs
crates/ohm-image/: Cargo.toml
crates/ohm-image/src/: lib.rs
crates/ohm-resvg/: Cargo.toml
crates/ohm-resvg/src/: lib.rs
crates/ohm-rustybuzz/: Cargo.toml
crates/ohm-rustybuzz/src/: lib.rs
crates/ohm-wgpu/: Cargo.toml
crates/ohm-wgpu/src/: blit.wgsl  lib.rs  uber.wgsl
crates/ohm-zeno/: Cargo.toml
crates/ohm-zeno/src/: lib.rs
crates/ohm/src/: encoder.rs  graphics.rs  lib.rs
crates/ohm2d/: Cargo.toml
crates/ohm2d-core/: Cargo.toml
crates/ohm2d-core/src/: asset.rs  batcher.rs  color.rs  error.rs  image.rs  lib.rs  texture.rs
crates/ohm2d-core/src/math/: mod.rs  rect.rs  urect.rs
crates/ohm2d-core/src/renderer/: batcher.rs  mod.rs
crates/ohm2d-core/src/text/: buffer.rs  font.rs  font_db.rs  rasterization.rs  shaping.rs
crates/ohm2d-fontdb/: Cargo.toml
crates/ohm2d-fontdb/src/: lib.rs
crates/ohm2d-freetype/: Cargo.toml
crates/ohm2d-freetype/src/: lib.rs
crates/ohm2d-image/: Cargo.toml
crates/ohm2d-image/src/: lib.rs
crates/ohm2d-rustybuzz/: Cargo.toml
crates/ohm2d-rustybuzz/src/: lib.rs
crates/ohm2d-wgpu/: Cargo.toml
crates/ohm2d-wgpu/src/: lib.rs  uber.wgsl
crates/ohm2d-zeno/: Cargo.toml
crates/ohm2d-zeno/src/: lib.rs
crates/ohm2d/src/: graphics.rs  lib.rs
examples/: simple_2d.rs
