[workspace]
resolver = "2"

members = [
  "crates/*"
]

[workspace.dependencies]
ohm2d = { path = "crates/ohm2d", version = "0.1.0" }
ohm2d-core = { path = "crates/ohm2d-core", version = "0.1.0" }
ohm2d-fontdb = { path = "crates/ohm2d-fontdb", version = "0.1.0" }
ohm2d-freetype = { path = "crates/ohm2d-freetype", version = "0.1.0" }
ohm2d-rustybuzz = { path = "crates/ohm2d-rustybuzz", version = "0.1.0" }
ohm2d-wgpu = { path = "crates/ohm2d-wgpu", version = "0.1.0" }
ohm2d-zeno = { path = "crates/ohm2d-zeno", version = "0.1.0" }

anyhow = "1.0.75"
encase = { version = "0.6.1", features = ["glam"] }
fontdb = "0.15.0"
freetype-rs = "0.34.0"
glam = "0.24.2"
guillotiere = "0.6.2"
image = { version = "0.24.7", default-features = false, features = ["png", "jpeg"] }
log = "0.4.20"
pollster = "0.3.0"
raw-window-handle = "0.5"
rustybuzz = "0.11.0"
self_cell = "1.0.1"
slotmap = "1.0.6"
smallvec = "1.11.1"
ttf-parser = "0.20.0"
unicode-bidi = "0.3.13"
unicode-linebreak = "0.1.5"
wgpu = "0.17.1"
winit = { version = "0.29.2", default-features = true, features = ["rwh_05", "x11"] }
zeno = "0.2.3"

[profile.dev]
opt-level = 1
