[workspace]
resolver = "2"

members = [
  "crates/*"
]

[workspace.dependencies]
ohm2d = { path = "crates/ohm2d", version = "0.1.0" }
ohm2d-core = { path = "crates/ohm2d-core", version = "0.1.0" }
ohm2d-fontdb = { path = "crates/ohm2d-fontdb", version = "0.1.0" }
ohm2d-freetype = { path = "crates/ohm2d-freetype", version = "0.1.0" }
ohm2d-image = { path = "crates/ohm2d-image", version = "0.1.0" }
ohm2d-rustybuzz = { path = "crates/ohm2d-rustybuzz", version = "0.1.0" }
ohm2d-wgpu = { path = "crates/ohm2d-wgpu", version = "0.1.0" }
ohm2d-zeno = { path = "crates/ohm2d-zeno", version = "0.1.0" }

encase = { version = "0.9.0", features = ["glam"] }
fontdb = "0.18.0"
freetype-rs = "0.37.0"
glam = "0.28.0"
guillotiere = "0.6.2"
image = { version = "0.25.1", default-features = false }
log = "0.4.21"
pollster = "0.3.0"
raw-window-handle = "0.6.2"
rustybuzz = "0.14.1"
self_cell = "1.0"
slotmap = "1.0"
smallvec = "1.13"
ttf-parser = "0.21.1"
unicode-bidi = "0.3.15"
unicode-linebreak = "0.1.5"
wgpu = "0.20.1"
winit = "0.30.3"
zeno = "0.3.1"

[profile.dev]
opt-level = 1
