[workspace]
resolver = "2"

members = [
  "crates/*"
]

[workspace.dependencies]
ohm = { path = "crates/ohm", version = "0.1.0" }
ohm-core = { path = "crates/ohm-core", version = "0.1.0" }
ohm-fontdb = { path = "crates/ohm-fontdb", version = "0.1.0" }
ohm-freetype = { path = "crates/ohm-freetype", version = "0.1.0" }
ohm-image = { path = "crates/ohm-image", version = "0.1.0" }
ohm-rustybuzz = { path = "crates/ohm-rustybuzz", version = "0.1.0" }
ohm-wgpu = { path = "crates/ohm-wgpu", version = "0.1.0" }
ohm-zeno = { path = "crates/ohm-zeno", version = "0.1.0" }

encase = { version = "0.9.0", features = ["glam"] }
fontdb = "0.18.0"
freetype-rs = "0.37.0"
glam = "0.28.0"
guillotiere = "0.6.2"
image = { version = "0.25.1", default-features = false }
lru = "0.12.3"
lyon_tessellation = "1.0"
pollster = "0.3.0"
raw-window-handle = "0.6.2"
rustybuzz = "0.14.1"
self_cell = "1.0"
slotmap = "1.0"
smallvec = "1.13"
ttf-parser = "0.21.1"
unicode-bidi = "0.3.15"
unicode-linebreak = "0.1.5"
wgpu = "0.20.1"
winit = "0.30.3"
zeno = "0.3.1"

[profile.dev]
opt-level = 1
