[package]
name = "ohm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-queue.workspace = true
glam.workspace = true
guillotiere.workspace = true
lru.workspace = true
lyon_tessellation.workspace = true
raw-window-handle.workspace = true
self_cell.workspace = true
slotmap.workspace = true
smallvec.workspace = true
ttf-parser.workspace = true
unicode-bidi.workspace = true
unicode-linebreak.workspace = true
