[package]
name = "ohm2d-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
ohm2d-core = { workspace = true }

anyhow = { workspace = true }
encase = { workspace = true }
raw-window-handle = { workspace = true }
slotmap = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
self_cell = { workspace = true }
