[package]
name = "ohm2d"
version = "0.1.0"
edition = "2021"

[dependencies]
ohm2d-core = { workspace = true }
ohm2d-fontdb = { workspace = true, optional = true }
ohm2d-freetype = { workspace = true, optional = true }
ohm2d-rustybuzz = { workspace = true, optional = true }
ohm2d-wgpu = { workspace = true, optional = true }
ohm2d-zeno = { workspace = true, optional = true }

anyhow = { workspace = true }

[dev-dependencies]
glam = { workspace = true }
winit = { workspace = true }

[features]
default = ["fontdb", "freetype", "rustybuzz", "wgpu", "zeno"]

fontdb = ["dep:ohm2d-fontdb"]
freetype = ["dep:ohm2d-freetype"]
rustybuzz = ["dep:ohm2d-rustybuzz"]
wgpu = ["dep:ohm2d-wgpu"]
zeno = ["dep:ohm2d-zeno"]

[[example]]
name = "simple_2d"
path = "../../examples/simple_2d.rs"
